# ocaml-circleci-example

./: .gitignore  README.md  myproject.opam
test/: .merlin  dune  mytest.ml
